di na hardcoded password