@@ -1,5 +1,7 @@
 package com.example.findit.controllers.admin;
 
+import com.example.findit.dao.UserDAO;
+import com.example.findit.model.User;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Parent;
@@ -9,48 +11,103 @@ import javafx.stage.Stage;
 
 public class AdminLoginController {
 
-    @FXML private PasswordField passwordField;
-    private static final String ADMIN_PASSWORD = "admin"; // placeholder for backend
+    @FXML
+    private PasswordField passwordField;
+
+    private final UserDAO userDAO = new UserDAO();
 
     @FXML
     private void handleLogin() {
-        String entered = passwordField.getText();
 
-        if (entered == null || entered.isBlank()) {
-            showAlert(Alert.AlertType.WARNING, "Validation", "Password cannot be empty.");
+        String password = passwordField.getText();
+
+        if (password == null || password.trim().isEmpty()) {
+
+            showAlert(
+                    Alert.AlertType.WARNING,
+                    "Validation Error",
+                    "Password cannot be empty."
+            );
+
             return;
         }
 
-        if (entered.equals(ADMIN_PASSWORD)) {
-            navigateTo("/com/example/findit/views/admin/AdminDashboard.fxml", "Admin Dashboard");
+        User admin = userDAO.adminLogin(password);
+
+        if (admin != null) {
+
+            System.out.println("Admin Logged In: "
+                    + admin.getFullName());
+
+            navigateTo(
+                    "/com/example/findit/views/admin/AdminDashboard.fxml",
+                    "Admin Dashboard"
+            );
+
         } else {
-            showAlert(Alert.AlertType.ERROR, "Access Denied", "Incorrect password. Please try again.");
+
+            showAlert(
+                    Alert.AlertType.ERROR,
+                    "Access Denied",
+                    "Invalid Admin Password."
+            );
+
             passwordField.clear();
         }
     }
 
     @FXML
     private void goBackToMain() {
-        navigateTo("/com/example/findit/views/user/MainPortal.fxml", "FindIT");
+
+        navigateTo(
+                "/com/example/findit/views/user/MainPortal.fxml",
+                "FindIT"
+        );
     }
 
-    private void navigateTo(String fxmlPath, String title) {
+    private void navigateTo(String fxmlPath,
+                            String title) {
+
         try {
-            FXMLLoader loader = new FXMLLoader(getClass().getResource(fxmlPath));
+
+            FXMLLoader loader =
+                    new FXMLLoader(
+                            getClass().getResource(fxmlPath)
+                    );
+
             Parent root = loader.load();
-            Stage stage = (Stage) passwordField.getScene().getWindow();
+
+            Stage stage =
+                    (Stage) passwordField
+                            .getScene()
+                            .getWindow();
+
             stage.getScene().setRoot(root);
+
             stage.setTitle(title);
+
         } catch (Exception e) {
+
             e.printStackTrace();
+
+            showAlert(
+                    Alert.AlertType.ERROR,
+                    "Navigation Error",
+                    "Unable to load page."
+            );
         }
     }
 
-    private void showAlert(Alert.AlertType type, String title, String message) {
+    private void showAlert(Alert.AlertType type,
+                           String title,
+                           String message) {
+
         Alert alert = new Alert(type);
+
         alert.setTitle(title);
         alert.setHeaderText(null);
         alert.setContentText(message);
+
         alert.showAndWait();
     }
 }
